cabal-version: 3.4

name: camino
homepage: https://git.computeroid.org/xand/camino
version: 0.5.0.0
synopsis: Algorithms for graph-like data
description:
    Camino is a curated repository of algorithms (and some data structures) that I've implemented
    to solve roughly graph-like computational problems.

author: Simon Lovell Bart <exclusiveandgate@gmail.com>
maintainer: Simon Lovell Bart <exclusiveandgate@gmail.com>
license: BSD-3-Clause
license-file: LICENSE

extra-doc-files:
    README.md

build-type: Simple

library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Camino.Map.Graph
        Camino.Identify
        Camino.Sparse.Graph
        Camino.Sparse.Reaching
        Camino.Sparse.Relations
        Camino.Strategies

    build-depends:
        base ^>=4.20,
        containers,
        primitive,
        transformers

    default-extensions:
        DeriveFoldable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiWayIf
        NamedFieldPuns
        OverloadedRecordDot
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications