cabal-version: 3.4

name: camino
homepage: https://git.computeroid.org/xand/camino
version: 0.6.0.0
synopsis: Algorithms for graph-like data
description:
    Camino is a curated repository of algorithms (and some data structures) that I've implemented
    to solve roughly graph-like computational problems.

author: Simon Lovell Bart <exclusiveandgate@gmail.com>
maintainer: Simon Lovell Bart <exclusiveandgate@gmail.com>
license: BSD-3-Clause
license-file: LICENSE

extra-doc-files:
    README.md

build-type: Simple

library
    default-language: Haskell2010

    hs-source-dirs: src

    exposed-modules:
        Camino.Identify
        Camino.Map.Graph
        Camino.Map.Justified
        Camino.Sparse.Graph
        Camino.Sparse.Reaching
        Camino.Sparse.Relations
        Camino.Strategies
    
    other-modules:
        Data.Map.Extra

    build-depends:
        base ^>=4.20,
        containers,
        primitive,
        transformers

    default-extensions:
        DeriveTraversable
        DuplicateRecordFields
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        NamedFieldPuns
        OverloadedRecordDot
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections