cabal-version:      3.4
name:               computeroid-search
version:            0.1.0.0
license:            BSD-3-Clause
author:             exclusive-and
maintainer:         exclusiveandgate@gmail.com
build-type:         Simple

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DeriveFoldable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiWayIf
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
    exposed-modules:
        Computeroid.AdjacencyMap
        Computeroid.Graph.Sparse
        Computeroid.Identify
        Computeroid.Reaching
        Computeroid.Strategies
    build-depends:
        base ^>=4.20,
        containers,
        primitive,
        transformers